Fix long line won't wrap issue in work description

--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -49,7 +49,7 @@ body,
     font-size: 13px;
   }
   #work-description {
-    white-space: pre ;
+    white-space: pre-wrap ;
   }
 }
 
